# cuthbert

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  em.py  index.html  mkdocs.yml  objects.inv  online_stoch_vol.py  pyproject.lib.toml  pyproject.toml  quickstart.py  sitemap.xml  zensical.toml
.github/workflows/: docs.yaml  pypi.yaml  tests.yaml
contributing/: index.html
cuthbert/: README.md  __init__.py  feynman_kac.py  filter.py  filtering.py  inference.py  kalman.py  smoothing.py  ssm.py  types.py  utils.py
cuthbert/discrete/: README.md  __init__.py  filter.py  smoother.py  types.py
cuthbert/enkf/: README.md  __init__.py  ensemble_kalman_filter.py  types.py
cuthbert/factorial/: README.md  __init__.py  discrete.py  filtering.py  gaussian.py  smc.py  types.py  utils.py
cuthbert/gaussian/: README.md  extended.py  kalman.py  log_density.py  moments.py  taylor.py  types.py  utils.py
cuthbert/generalised_kalman/: README.md  __init__.py  conditional_moments.py  generalised_kalman.py  inference.py  kalman.py  linear_gaussian_ssm.py  ssm.py
cuthbert/hmm/: filter.py
cuthbert/mcmc/: __init__.py
cuthbert/npf/: __init__.py  filter.py  types.py
cuthbert/smc/: README.md  backward_sampler.py  bootstrap.py  marginal_particle_filter.py  particle_filter.py  types.py
cuthbert_api/: index.html
cuthbert_api/discrete/: index.html
cuthbert_api/filtering/: index.html
cuthbert_api/gaussian/: index.html
cuthbert_api/smc/: index.html
cuthbert_api/smoothing/: index.html
cuthbertlib/: README.md  VERSION  __init__.py  pyproject.toml  types.py
cuthbertlib/common/: __init__.py
cuthbertlib/cuthbertlib/: types.py
cuthbertlib/cuthbertlib/discrete/: filtering.py  smoothing.py
cuthbertlib/cuthbertlib/kalman/: README.md  __init__.py  filtering.py  smoothing.py
cuthbertlib/cuthbertlib/linalg/: README.md  __init__.py  collect_nans_chol.py  symmetric_inv_sqrt.py  tria.py
cuthbertlib/cuthbertlib/linearize/: README.md  __init__.py  log_density.py  moments.py
cuthbertlib/cuthbertlib/quadrature/: README.md  cubature.py  gauss_hermite.py  linearize.py
cuthbertlib/cuthbertlib/resampling/: __init__.py  killing.py  multinomial.py  protocols.py  systematic.py
cuthbertlib/cuthbertlib/smc/: README.md  ess.py
cuthbertlib/cuthbertlib/smc/smoothing/: protocols.py  tracing.py
cuthbertlib/cuthbertlib/stats/: README.md  multivariate_normal.py
cuthbertlib/discrete/: filtering.py  smoothing.py
cuthbertlib/enkf/: README.md  __init__.py  filtering.py
cuthbertlib/kalman/: README.md  __init__.py  filtering.py  generate.py  sampling.py  smoothing.py  utils.py
cuthbertlib/linalg/: README.md  __init__.py  collect_nans_chol.py  marginal_sqrt_cov.py  symmetric_inv_sqrt.py  tria.py
cuthbertlib/linearize/: README.md  __init__.py  log_density.py  moments.py  taylor.py  utils.py
cuthbertlib/mcmc/: __init__.py  index_select.py  protocols.py
cuthbertlib/quadrature/: README.md  __init__.py  common.py  cubature.py  gauss_hermite.py  linearize.py  unscented.py  utils.py
cuthbertlib/resampling/: README.md  __init__.py  adaptive.py  autodiff.py  killing.py  multinomial.py  no_resampling.py  protocols.py  stop_gradient.py  systematic.py  utils.py
cuthbertlib/smc/: README.md  backward.py  ess.py
cuthbertlib/smc/smoothing/: exact.py  exact_sampling.py  mcmc.py  protocols.py  tracing.py
cuthbertlib/stats/: README.md  multivariate_normal.py
cuthbertlib_api/: index.html
cuthbertlib_api/discrete/: index.html
cuthbertlib_api/kalman/: index.html
cuthbertlib_api/linalg/: index.html
cuthbertlib_api/linearize/: index.html
cuthbertlib_api/quadrature/: index.html
cuthbertlib_api/resampling/: index.html
cuthbertlib_api/smc/: index.html
cuthbertlib_api/stats/: index.html
cuthbertlib_api/types/: index.html
docs/: README.md  contributing.md  conventions.md  index.md  quickstart.md
docs/api/: discrete.md  filtering.md  index.md  smoothing.md
docs/api_cuthbert/: discrete.md  enkf.md  index.md
docs/api_cuthbertlib/: discrete.md  enkf.md  index.md  kalman.md  linalg.md  linearize.md  quadrature.md  resampling.md  smc.md  stats.md  types.md
docs/cuthbert_api/: discrete.md  index.md  smoothing.md
docs/cuthbertlib_api/: enkf.md  index.md  kalman.md  linalg.md  linearize.md  quadrature.md  resampling.md  smc.md  stats.md
docs/examples/: diff_pf_resampling.md  dynamax_integration.md  enkf_comparison.md  index.md  kalman_tracking.md  online_stoch_vol.md  parameter_estimation_em.md  quickstart.md  steady_state_kalman.md  temporal_parallelization_kalman.md
docs/stylesheets/: extra.css
examples/: index.html
examples/diff_pf_resampling/: index.html
examples/dynamax_integration/: index.html
examples/kalman_tracking/: index.html
examples/online_stoch_vol/: index.html
examples/parameter_estimation_em/: index.html
examples/temporal_parallelization_kalman/: index.html
kalman/: README.md  __init__.py  filter.py  filtering.py  kalman.py  online.py  protocols.py  sampling.py  smoother.py  smoothing.py  utils.py
linearize/: README.md  __init__.py  density.py  linearize.py  log_density.py  moments.py  taylor.py  utils.py
pkg/cuthbert/: pyproject.toml
pkg/cuthbertlib/: README.md  pyproject.toml
quadrature/: README.md  __init__.py  common.py  cubature.py  gauss_hermite.py  linearize.py  unscented.py  utils.py
quickstart/: index.html
resampling/: README.md  __init__.py  killing.py  multinomial.py  protocols.py  systematic.py  utils.py
scripts/: warmup_jit.py
stylesheets/: extra.css
tests/: test_examples_scripts.py  warmup_jit.py
tests/cuthbert/: test_kalman.py  test_utils.py
tests/kalman/: benchmark.py  test_filter.py  test_filtering.py  test_kalman.py  test_online.py  test_sampling.py  test_smoother.py  test_smoothing.py  test_utils.py  utils.py
tests/linearize/: test_density.py  test_linearize.py  test_moments.py  test_taylor.py  test_utils.py
tests/quadrature/: test_cubature_is_unscented.py  test_linear.py
tests/resampling/: test_common.py  test_resamplings.py  test_utils.py  (+1 more)
(+106 files in other folders)
