[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cuthbert"
version = "0.0.1"
description = "State-space model inference with JAX"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Sam Duffield", email = "s@mduffield.com" },
    { name = "Adrien Corenflos", email = "adrien.corenflos.stats@gmail.com" },
]

dependencies = [
    "jax>=0.4.35",
    "numba>=0.60.0",
]

[tool.setuptools.packages.find]
include = ["cuthbert", "cuthbertlib"]

[project.optional-dependencies]
test = [
    "chex",  # test additional dependencies
    "pre-commit", "ruff", "pyright",  # linting etc
    "pytest", "pytest-xdist",  # testing
    "entangled_cli", # convert .md examples to .py
]
docs = ["mkdocs-material", "mkdocs-include-markdown-plugin", "mkdocstrings-python"]
examples = ["matplotlib"]

[tool.ruff]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F821", "E402"]

[tool.pytest]
[tool.pytest.ini_options]
markers = "examples: Run tangled example scripts as tests"

[tool.entangled]
version = "2.1.13"
ignore_list = ["CONTRIBUTING.md"]
