[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cuthbert"
version = "0.0.2"
description = "State-space model inference with JAX"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Sam Duffield", email = "s@mduffield.com" },
    { name = "Sahel Iqbal", email = "sahel13miqbal@proton.me" },
    { name = "Adrien Corenflos", email = "adrien.corenflos.stats@gmail.com" },
]

dependencies = [
    "jax>=0.4.35",
    "numba>=0.60.0",
]

[tool.uv]
# The tensorflow-probability override forces installation on undefined platforms only
# effectively disabling it for all normal platforms
override-dependencies = [
    "tensorflow-probability ; sys_platform == 'undefined'",
]

[tool.setuptools.packages.find]
include = ["cuthbert*", "cuthbertlib*"]

[project.optional-dependencies]
tests = [
    "chex",  # test additional dependencies
    "pre-commit", "ruff", "pyright",  # linting etc
    "pytest", "pytest-xdist",  # testing
    "entangled-cli; python_version >= '3.12'", # convert .md examples to .py, requires Python 3.12+
]
docs = ["mkdocs-material", "mkdocs-include-markdown-plugin", "mkdocstrings-python"]
examples = [
    "matplotlib", "pandas", "pandas-stubs", "yfinance",
    "dynamax", "ipython", "tfp-nightly[jax]",
]
# ipython just required for dynamax, can be removed when they do a new release
# tfp-nightly[jax] provides tensorflow_probability module that dynamax needs

[tool.ruff]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F821", "E402", "D104"]
"tests/**/*.py" = ["D"] # no docstring checking for tests
"cuthbertlib/resampling/**/*.py" = ["D103"] # resampling uses decorator for docstrings
[tool.ruff.lint]
select = ["D"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest]
[tool.pytest.ini_options]
markers = "examples: Run tangled example scripts as tests"

[tool.entangled]
version = "2.3.0"
ignore_list = ["CONTRIBUTING.md"]
