[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cuthbert"
version = "0.0.3"
description = "State-space model inference with JAX"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Sam Duffield", email = "s@mduffield.com" },
    { name = "Sahel Iqbal", email = "sahel13miqbal@proton.me" },
    { name = "Adrien Corenflos", email = "adrien.corenflos.stats@gmail.com" },
]

dependencies = [
    "jax>=0.4.35",
    "numba>=0.60.0",
    "cuthbertlib==0.0.3", # Direct dependency on the library
]

[tool.setuptools.packages.find]
include = ["cuthbert*"]

[project.optional-dependencies]
tests = [
    "chex",
    "pre-commit", "ruff", "pyright",
    "pytest", "pytest-xdist",
    "entangled-cli; python_version >= '3.12'",
]
docs = ["mkdocs-material", "mkdocs-include-markdown-plugin", "mkdocstrings-python"]
examples = [
    "matplotlib", "pandas", "pandas-stubs", "yfinance",
    "dynamax", "ipython", "tfp-nightly[jax]",
]

[tool.ruff]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F821", "E402", "D104"]
"tests/**/*.py" = ["D"]
"cuthbertlib/resampling/**/*.py" = ["D103"]
[tool.ruff.lint]
select = ["D"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
markers = "examples: Run tangled example scripts as tests"

[tool.entangled]
version = "2.3.0"
ignore_list = ["CONTRIBUTING.md"]