[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cuthbertlib"
dynamic = ["version"]
description = "Atomic modules for `cuthbert`."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Sam Duffield", email = "s@mduffield.com" },
    { name = "Sahel Iqbal", email = "sahel13miqbal@proton.me" },
    { name = "Adrien Corenflos", email = "adrien.corenflos.stats@gmail.com" },
]

dependencies = [
    "jax>=0.4.35",
    "numba>=0.60.0",
]

[tool.hatch.version]
path = "_version.py"

[tool.hatch.build.targets.wheel]
include = ["**/*.py"]
exclude = ["pyproject.toml", "README*"]

[tool.hatch.build.targets.wheel.sources]
"" = "cuthbertlib"
