[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cuthbertlib"
dynamic = ["version"]
description = "Atomic building blocks for state-space model inference with JAX"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Sam Duffield", email = "s@mduffield.com" },
    { name = "Sahel Iqbal", email = "sahel13miqbal@proton.me" },
    { name = "Adrien Corenflos", email = "adrien.corenflos.stats@gmail.com" },
]
dependencies = [
    "jax>=0.4.35",
    "numba>=0.60.0",
]

[tool.hatch.version]
source = "vcs"
raw-options = { root = "../.." }

[tool.hatch.build]
dev-mode-dirs = ["../.."]

[tool.hatch.build.targets.wheel]
packages = ["cuthbertlib"]

[tool.hatch.build.targets.sdist.force-include]
"../../cuthbertlib" = "cuthbertlib"
