[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cuthbertlib"
version = "0.0.8"
description = "Atomic building blocks for state-space model inference with JAX"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Sam Duffield", email = "s@mduffield.com" },
    { name = "Sahel Iqbal", email = "sahel13miqbal@proton.me" },
    { name = "Adrien Corenflos", email = "adrien.corenflos.stats@gmail.com" },
]
dependencies = [
    "jax>=0.4.35",
    "numba>=0.60.0",
]

[tool.hatch.build]
dev-mode-dirs = ["../.."]

[tool.hatch.build.targets.wheel]
packages = ["cuthbertlib"]

[tool.hatch.build.targets.wheel.force-include]
"../../cuthbertlib" = "cuthbertlib"

[tool.hatch.build.targets.sdist.force-include]
"../../cuthbertlib" = "cuthbertlib"
"../../cuthbertlib/README.md" = "README.md"